--- a/assets/scss/_productos.scss
+++ b/assets/scss/_productos.scss
@@ -1,5 +1,13 @@
 @import "../scss/_Variables.scss";
 
+@mixin size-card {
+    width: 15em;
+    height: 25em;
+}
+@mixin size-img-card {
+    width: 13em;
+    height: 18em;
+}
 .content-bread {
     
     .bread-libros {
@@ -88,11 +96,9 @@
             flex-direction: column;
             border: 1px solid rgba(128, 128, 128, 0.253);
             border-radius: 8px;
-            width: 15em;
-            height: 25em;
+            @include size-card();
             img {
-                width: 13em;
-                height: 18em;
+                @include size-img-card();
             }
             h2 {
                 text-align: center;
