--- a/views/fantasia.html
+++ b/views/fantasia.html
@@ -69,7 +69,7 @@
                     <li class="bread-lista__item"><a class="bread__link bread__link--back"
                             href="../views/productos.html"> Libros </a>
                     </li>
-                    <li class="bread-lista__item"><p class="bread__link bread__link--red" href=""> Fantasia</p>
+                    <li class="bread-lista__item"><p class="bread__link bread__link--red" href=""> Fantasía</p>
                     </li>
                 </ul>
             </nav>
@@ -87,8 +87,8 @@
         <!-- filtros -->
         <div class="container navbar-filtros">
             <div class="generos__filtros">
-                <a href="" id="selected-block">Fantasia</a>
-                <a href="#">Ficcion</a>
+                <a href="" id="selected-block">Fantasía</a>
+                <a href="#">Ficción</a>
                 <a href="#">Terror</a>
                 <a href="#">Romance</a>
             </div>
