--- a/views/productos.html
+++ b/views/productos.html
@@ -84,8 +84,8 @@
         <!-- filtros -->
         <div class="container navbar-filtros">
             <div class="generos__filtros">
-                <a href="../views/fantasia.html">Fantasia</a>
-                <a href="#">Ficcion</a>
+                <a href="../views/fantasia.html">Fantasía</a>
+                <a href="#">Ficción</a>
                 <a href="#">Terror</a>
                 <a href="#">Romance</a>
             </div>
