--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,7 +1,7 @@
 @import "../scss/_Variables.scss";
 @import "../scss/_productos.scss";
 @import "../scss/_fantasia.scss";
-
+@import "./_ficcion.scss";
 
 
 * {
