--- a/views/ficcion.html
+++ b/views/ficcion.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <meta name="keywords"
-        content="Atenas, Libros, Libreria, Harry Potter, Lore, Fantasia, Tienda online, Envios Gratis">
+        content="Atenas, Libros, Libreria, Riverdale, Ficción, Tienda online, Envíos Gratis">
     <meta name="description"
-        content="Todos los Libros que necesitas/buscas de FANTASIA, en un solo lugar. Envios gratis en pedidos mayores a $3000. Recibi tu pedido en tu casa sin demoras.">
+        content="Todos los Libros que necesitas/buscas de FICCION, en un solo lugar. Envíos gratis en pedidos mayores a $3000. Recibi tu pedido en tu casa sin demoras.">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Compra libros FANTASIA</title>
+    <title>Compra libros de FICCIÓN</title>
 </head>
-
 <body>
     <header>
         <div class="container container-principal">
@@ -69,7 +67,7 @@
                     <li class="bread-lista__item"><a class="bread__link bread__link--back"
                             href="../views/productos.html"> Libros </a>
                     </li>
-                    <li class="bread-lista__item"><p class="bread__link bread__link--red" href=""> Fantasía</p>
+                    <li class="bread-lista__item"><p class="bread__link bread__link--red" href=""> Ficción</p>
                     </li>
                 </ul>
             </nav>
@@ -87,8 +85,8 @@
         <!-- filtros -->
         <div class="container navbar-filtros">
             <div class="generos__filtros">
-                <a href="#" id="selected-block">Fantasía</a>
-                <a href="./ficcion.html">Ficción</a>
+                <a href="./fantasia.html">Fantasía</a>
+                <a href="./ficcion.html" id="selected-block">Ficción</a>
                 <a href="#">Terror</a>
                 <a href="#">Romance</a>
             </div>
@@ -99,30 +97,30 @@
             <!-- row -->
             <div class="row content__cards">
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                    <img src="../assets/media/libros/fantasia/asesino-brujas.jpg" alt="asesino de brujas">
-                    <h2>Asesino de Brujas</h2>
-                    <p>$1.790</p>
+                    <img src="../assets/media/libros/ficcion/boulevard.jpg" alt="Boulevard">
+                    <h2>Boulevard</h2>
+                    <p>$1.799</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                    <img src="../assets/media/libros/fantasia/las-lunas-de-sartre.jpg" alt="">
-                    <h2>Las Lunas de Sartre</h2>
-                    <p>$1.900</p>
+                    <img src="../assets/media/libros/ficcion/dos-metros-de-ti.png" alt="a dos metros de ti">
+                    <h2>A dos metros de ti</h2>
+                    <p>$1.590</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                    <img src="../assets/media/libros/fantasia/lore.png" alt="">
-                    <h2>Lore</h2>
+                    <img src="../assets/media/libros/ficcion/serás.png" alt="serás">
+                    <h2>Serás</h2>
+                    <p>$1.399</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+                <!-- card -->
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/ficcion/los-siete.jpg" alt="los siete maridos de evelyn hugo">
+                    <h2>Los siete maridos de Evelyn Hugo</h2>
                     <p>$1.990</p>
-                    <a href="#" class="btn">Comprar</a>
-                </div>
-                <!-- card -->
-                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                    <img src="../assets/media/libros/fantasia/manuscritos-rojos.png" alt="">
-                    <h2>Los manuscritos rojos de la magia</h2>
-                    <p>$2.190</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
             </div>
@@ -130,29 +128,29 @@
             <!-- row -->
             <div class="row content__cards">
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                    <img src="../assets/media/libros/fantasia/matar-un-reino.jpg" alt="matar un reino">
-                    <h2>Matar un Reino</h2>
-                    <p>$1.990</p>
+                    <img src="../assets/media/libros/ficcion/lo-poco-que-sabemos.png" alt="lo poco que sabemos">
+                    <h2>Lo poco que sabemos</h2>
+                    <p>$2.190</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                    <img src="../assets/media/libros/fantasia/rey-maldito.jpg" alt="rey malvado">
-                    <h2>El Rey malvado</h2>
-                    <p>$2.500</p>
+                    <img src="../assets/media/libros/ficcion/riverdale.jpg" alt="Riverdale">
+                    <h2>Riverdale, El día anterior</h2>
+                    <p>$1.550</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                    <img src="../assets/media/libros/fantasia/ultimo-mago.jpg" alt="ultimo mago">
-                    <h2>El Ultimo Mago</h2>
-                    <p>$1.999</p>
+                    <img src="../assets/media/libros/ficcion/trece-razones.jpg" alt="por trece razones">
+                    <h2>Por trece razones</h2>
+                    <p>$1.179</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                    <img src="../assets/media/libros/fantasia/asedioytormenta.jpg" alt="asedioytormenta">
-                    <h2>Asedio y Tormenta</h2>
+                    <img src="../assets/media/libros/ficcion/la-vida-invisible-de.jpg" alt="La vida invisible de Addie larue">
+                    <h2>La vida invisble de Addie Larue</h2>
                     <p>$2.700</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
@@ -160,30 +158,30 @@
             <!-- row -->
             <div class="row content__cards">
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                    <img src="../assets/media/libros/fantasia/supernova.jpg" alt="supernova">
-                    <h2>Supernova</h2>
-                    <p>$1.399</p>
+                    <img src="../assets/media/libros/ficcion/obsesion-perversa.png" alt="obsesion perversa">
+                    <h2>Obsesion Perversa</h2>
+                    <p>$1.890</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                    <img src="../assets/media/libros/fantasia/rey-elfhame.jpg" alt="como el rey de Elfhame aprendio">
-                    <h2>Como el Rey Elfhame aprendio a ..</h2>
-                    <p>$2.789</p>
+                    <img src="../assets/media/libros/ficcion/sabrina.jpg" alt="Sabrina">
+                    <h2>Sabrina, el camino de la Bruja</h2>
+                    <p>$1.550</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                    <img src="../assets/media/libros/fantasia/maze-runner.png" alt="maze runner">
-                    <h2>Maze Runner, Correr o morir</h2>
-                    <p>$1.399</p>
+                    <img src="../assets/media/libros/ficcion/la-elite.jpg" alt="La Elite">
+                    <h2>La Elite</h2>
+                    <p>$1.559</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                    <img src="../assets/media/libros/fantasia/maze-3.png" alt="maze runner 3">
-                    <h2>Maze Runner, la cura mortal</h2>
-                    <p>$1.399</p>
+                    <img src="../assets/media/libros/ficcion/after.jpg" alt="maze runner">
+                    <h2>After</h2>
+                    <p>$1.740</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
             </div>
@@ -242,11 +240,9 @@
         </div>
 
     </footer>
+    
 
-
-
-
-
+    <!-- scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
     </script>
@@ -254,5 +250,4 @@
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
     </script>
 </body>
-
 </html>
