cree seccion terror

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -2,6 +2,7 @@
 @import "../scss/_productos.scss";
 @import "../scss/_fantasia.scss";
 @import "./_ficcion.scss";
+@import "./_terror.scss";
 
 
 * {
