transforme seccion terror en pagina error404

--- a/views/fantasia.html
+++ b/views/fantasia.html
@@ -89,7 +89,7 @@
             <div class="generos__filtros">
                 <a href="#" id="selected-block">Fantasía</a>
                 <a href="./ficcion.html">Ficción</a>
-                <a href="#">Terror</a>
+                <a href="./terror.html">Terror</a>
                 <a href="#">Romance</a>
             </div>
         </div>
