--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,6 +109,14 @@
 .navbar-filtros .generos__filtros #selected-block:hover {
   transform: none; }
 
+.error-404 {
+  height: 100vh;
+  width: 100%; }
+  .error-404 img {
+    height: 800px;
+    width: 100%;
+    object-fit: cover; }
+
 * {
   margin: 0;
   padding: 0;
