--- a/assets/scss/_terror.scss
+++ b/assets/scss/_terror.scss
@@ -1,1 +1,11 @@
 @import "../scss/_Variables.scss";
+
+.error-404 {
+    height: 100vh;
+    width: 100%;
+    img {
+        height: 800px;
+        width: 100%;
+        object-fit: cover;
+    }
+}
