--- a/views/ficcion.html
+++ b/views/ficcion.html
@@ -87,7 +87,7 @@
             <div class="generos__filtros">
                 <a href="./fantasia.html">Fantasía</a>
                 <a href="./ficcion.html" id="selected-block">Ficción</a>
-                <a href="#">Terror</a>
+                <a href="./terror.html">Terror</a>
                 <a href="#">Romance</a>
             </div>
         </div>
