--- a/views/productos.html
+++ b/views/productos.html
@@ -86,7 +86,7 @@
             <div class="generos__filtros">
                 <a href="./fantasia.html">Fantasía</a>
                 <a href="./ficcion.html">Ficción</a>
-                <a href="#">Terror</a>
+                <a href="./terror.html">Terror</a>
                 <a href="#">Romance</a>
             </div>
         </div>
