--- a/views/terror.html
+++ b/views/terror.html
@@ -14,6 +14,72 @@
     <title>compra libros de TERROR</title>
 </head>
 <body>
-    
+    <header>
+        <div class="container container-principal">
+            <div class="index container">
+                <nav class="navbar navbar-expand-lg navbar-light ">
+                    <div class="container atenas">
+                        <a class="logo navbar-brand" href="../index.html">Atenas</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link active " aria-current="page" href="../index.html">Inicio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="libros nav-link " href="./productos.html">Libros</a>
+
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Editorial</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <nav class="navbar navbar-light ">
+                            <div class="container-fluid">
+                                <form class="d-flex">
+                                    <input class="form-control me-2" type="search" placeholder="Search"
+                                        aria-label="Search">
+                                    <button class="btn btn-outline-success" type="submit">Search</button>
+                                </form>
+                            </div>
+                        </nav>
+                        <a href="#"><i class="carrito fab fa-shopify"></i></a>
+                    </div>
+                </nav>
+            </div>
+        </div>
+
+        <div class="container-fluid content-bread">
+            <nav class="bread-libros">
+                <ul class="bread-lista">
+                    <li class="bread-lista__item"><a class="bread__link bread__link--back" href="../index.html"><i
+                                class="fas fa-long-arrow-alt-left"></i> Home </a>
+                    </li>
+                    <li class="bread-lista__item"><a class="bread__link bread__link--back"
+                            href="../views/productos.html"> Libros </a>
+                    </li>
+                    <li class="bread-lista__item"><p class="bread__link bread__link--red" href=""> Terror</p>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+<main>
+    <div class="container-fluid error-404">
+        <img src="../assets/media/error-404.jpg" alt="">
+    </div>
+</main>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
 </body>
 </html>
