--- a/assets/scss/_terror.scss
+++ b/assets/scss/_terror.scss
@@ -1,7 +1,7 @@
 @import "../scss/_Variables.scss";
 
 .error-404 {
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     img {
         height: 800px;
