empece pagina seccion romantica

--- a/views/fantasia.html
+++ b/views/fantasia.html
@@ -90,7 +90,7 @@
                 <a href="#" id="selected-block">Fantasía</a>
                 <a href="./ficcion.html">Ficción</a>
                 <a href="./terror.html">Terror</a>
-                <a href="#">Romance</a>
+                <a href="./romantico.html">Romantico</a>
             </div>
         </div>
 
