--- a/views/ficcion.html
+++ b/views/ficcion.html
@@ -88,7 +88,7 @@
                 <a href="./fantasia.html">Fantasía</a>
                 <a href="./ficcion.html" id="selected-block">Ficción</a>
                 <a href="./terror.html">Terror</a>
-                <a href="#">Romance</a>
+                <a href="./romantico.html">Romantico</a>
             </div>
         </div>
 
