--- a/views/terror.html
+++ b/views/terror.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="../assets/css/style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <meta name="keywords"
-    content="Atenas, Libros, Libreria, terror, Tienda online, Envíos Gratis">
+    content="Atenas, Libros, Libreria, terror, Tienda online, Envíos Gratis, error">
 <meta name="description"
     content="Todos los Libros que necesitas/buscas de TERROR, en un solo lugar. Envíos gratis en pedidos mayores a $3000. Recibi tu pedido en tu casa sin demoras.">
     <meta charset="UTF-8">
