--- a/views/productos.html
+++ b/views/productos.html
@@ -87,7 +87,7 @@
                 <a href="./fantasia.html">Fantasía</a>
                 <a href="./ficcion.html">Ficción</a>
                 <a href="./terror.html">Terror</a>
-                <a href="#">Romance</a>
+                <a href="./romantico.html">Romantico</a>
             </div>
         </div>
 
