--- a/views/romantico.html
+++ b/views/romantico.html
@@ -67,7 +67,7 @@
                         <li class="bread-lista__item"><a class="bread__link bread__link--back"
                                 href="../views/productos.html"> Libros </a>
                         </li>
-                        <li class="bread-lista__item"><p class="bread__link bread__link--red" href=""> Ficción</p>
+                        <li class="bread-lista__item"><p class="bread__link bread__link--red" href=""> Romantico</p>
                         </li>
                     </ul>
                 </nav>
@@ -86,9 +86,9 @@
             <div class="container navbar-filtros">
                 <div class="generos__filtros">
                     <a href="./fantasia.html">Fantasía</a>
-                    <a href="./ficcion.html" id="selected-block">Ficción</a>
+                    <a href="./ficcion.html">Ficción</a>
                     <a href="./terror.html">Terror</a>
-                    <a href="./romantico.html">Romantico</a>
+                    <a href="./romantico.html" id="selected-block">Romantico</a>
                 </div>
             </div>
     
@@ -104,23 +104,23 @@
                     </div>
                     <!-- card -->
                     <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                        <img src="../assets/media/libros/ficcion/dos-metros-de-ti.png" alt="a dos metros de ti">
-                        <h2>A dos metros de ti</h2>
-                        <p>$1.590</p>
+                        <img src="../assets/media/libros/romantico/atraves-1749.jpg" alt="a traves de mi ventana">
+                        <h2>A través de mi ventana</h2>
+                        <p>$1.749</p>
                         <a href="#" class="btn">Comprar</a>
                     </div>
                     <!-- card -->
                     <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                        <img src="../assets/media/libros/ficcion/serás.png" alt="serás">
-                        <h2>Serás</h2>
+                        <img src="../assets/media/libros/romantico/heist-1850.jpg" alt="heist">
+                        <h2>Heist</h2>
+                        <p>$1.869</p>
+                        <a href="#" class="btn">Comprar</a>
+                    </div>
+                    <!-- card -->
+                    <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                        <img src="../assets/media/libros/romantico/bajo-las-estrellas.jpg" alt="bajo las estrellas">
+                        <h2>Bajo las estrellas</h2>
                         <p>$1.399</p>
-                        <a href="#" class="btn">Comprar</a>
-                    </div>
-                    <!-- card -->
-                    <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                        <img src="../assets/media/libros/ficcion/los-siete.jpg" alt="los siete maridos de evelyn hugo">
-                        <h2>Los siete maridos de Evelyn Hugo</h2>
-                        <p>$1.990</p>
                         <a href="#" class="btn">Comprar</a>
                     </div>
                 </div>
@@ -128,46 +128,39 @@
                 <!-- row -->
                 <div class="row content__cards">
                     <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                        <img src="../assets/media/libros/ficcion/lo-poco-que-sabemos.png" alt="lo poco que sabemos">
-                        <h2>Lo poco que sabemos</h2>
-                        <p>$2.190</p>
+                        <img src="../assets/media/libros/romantico/dimeloconbesos-1799.jpg" alt="dimelo con besos">
+                        <h2>Dimelo con besos</h2>
+                        <p>$1.799</p>
                         <a href="#" class="btn">Comprar</a>
                     </div>
                     <!-- card -->
                     <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                        <img src="../assets/media/libros/ficcion/riverdale.jpg" alt="Riverdale">
-                        <h2>Riverdale, El día anterior</h2>
-                        <p>$1.550</p>
+                        <img src="../assets/media/libros/romantico/dejate-atrapar.jpg" alt="dejate atrapar">
+                        <h2>Dejate atrapar</h2>
+                        <p>$900</p>
                         <a href="#" class="btn">Comprar</a>
                     </div>
                     <!-- card -->
                     <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                        <img src="../assets/media/libros/ficcion/trece-razones.jpg" alt="por trece razones">
-                        <h2>Por trece razones</h2>
-                        <p>$1.179</p>
+                        <img src="../assets/media/libros/romantico/alaska.jpg" alt="El dia que dejo de nevar en Alaska">
+                        <h2>El día que dejó de nevar en Alaska</h2>
+                        <p>$2.090</p>
                         <a href="#" class="btn">Comprar</a>
                     </div>
                     <!-- card -->
                     <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                        <img src="../assets/media/libros/ficcion/la-vida-invisible-de.jpg" alt="La vida invisible de Addie larue">
-                        <h2>La vida invisble de Addie Larue</h2>
-                        <p>$2.700</p>
+                        <img src="../assets/media/libros/romantico/perfectos-mentirosos-1399.jpg" alt="perfectos Mentirosos">
+                        <h2>Perfectos Mentirosos</h2>
+                        <p>$1.399</p>
                         <a href="#" class="btn">Comprar</a>
                     </div>
                 </div>
                 <!-- row -->
                 <div class="row content__cards">
                     <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                        <img src="../assets/media/libros/ficcion/obsesion-perversa.png" alt="obsesion perversa">
-                        <h2>Obsesion Perversa</h2>
-                        <p>$1.890</p>
-                        <a href="#" class="btn">Comprar</a>
-                    </div>
-                    <!-- card -->
-                    <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                        <img src="../assets/media/libros/ficcion/sabrina.jpg" alt="Sabrina">
-                        <h2>Sabrina, el camino de la Bruja</h2>
-                        <p>$1.550</p>
+                        <img src="../assets/media/libros/romantico/fingiendo-amor.jpg" alt="fingiendo amor">
+                        <h2>Fingiendo amor</h2>
+                        <p>$2.199</p>
                         <a href="#" class="btn">Comprar</a>
                     </div>
                     <!-- card -->
@@ -175,6 +168,13 @@
                         <img src="../assets/media/libros/ficcion/la-elite.jpg" alt="La Elite">
                         <h2>La Elite</h2>
                         <p>$1.559</p>
+                        <a href="#" class="btn">Comprar</a>
+                    </div>
+                    <!-- card -->
+                    <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                        <img src="../assets/media/libros/ficcion/dos-metros-de-ti.png" alt="a dos metros de ti">
+                        <h2>A dos metros de ti</h2>
+                        <p>$1.599</p>
                         <a href="#" class="btn">Comprar</a>
                     </div>
                     <!-- card -->
