agregue todos los productos a la pagina libros

--- a/views/productos.html
+++ b/views/productos.html
@@ -187,6 +187,161 @@
                     <a href="#" class="btn">Comprar</a>
                 </div>
             </div>
+            <!-- row -->
+            <div class="row content__cards">
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/fantasia/asesino-brujas.jpg" alt="asesino de brujas">
+                    <h2>Asesino de Brujas</h2>
+                    <p>$1.790</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+                <!-- card -->
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/fantasia/supernova.jpg" alt="supernova">
+                    <h2>Supernova</h2>
+                    <p>$1.399</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+                <!-- card -->
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/fantasia/rey-elfhame.jpg" alt="como el rey elfhame aprendio a odiar las historias">
+                    <h2>Como el Rey Elfhame aprendio a..</h2>
+                    <p>$2.789</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+                <!-- card -->
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/ficcion/boulevard.jpg"
+                        alt="Boulevard">
+                    <h2>Boulevard</h2>
+                    <p>$1.799</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+            </div>
+            <!-- row -->
+            <div class="row content__cards">
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/fantasia/maze-runner.png" alt="Maze runner 1">
+                    <h2>Maze Runner, Correr o morir</h2>
+                    <p>$1.399</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+                <!-- card -->
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/fantasia/maze-3.png" alt="maze runner 3">
+                    <h2>Maze Runner, la cura mortal</h2>
+                    <p>$1.399</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+                <!-- card -->
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/ficcion/dos-metros-de-ti.png" alt="dos metros de ti">
+                    <h2>A dos metros de ti</h2>
+                    <p>$1.590</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+                <!-- card -->
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/ficcion/serás.png"
+                        alt="los manuscritos rojos de la magia">
+                    <h2>Serás</h2>
+                    <p>$1.399</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+            </div>
+            <!-- row -->
+            <div class="row content__cards">
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/ficcion/los-siete.jpg" alt="los siete marido de evelyn hugo">
+                    <h2>Los siete maridos de Evelyn Hugo</h2>
+                    <p>$1.990</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+                <!-- card -->
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/ficcion/trece-razones.jpg" alt="por trece razones">
+                    <h2>Por trece razones</h2>
+                    <p>$1.179</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+                <!-- card -->
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/ficcion/obsesion-perversa.png" alt="Obsesión Perversa">
+                    <h2>Obsesión Perversa</h2>
+                    <p>$1.890</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+                <!-- card -->
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/ficcion/la-elite.jpg"
+                        alt="La Elite">
+                    <h2>La Elite</h2>
+                    <p>$1.559</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+            </div>
+            <!-- row -->
+            <div class="row content__cards">
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/ficcion/after.jpg" alt="After">
+                    <h2>After</h2>
+                    <p>$1.740</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+                <!-- card -->
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/romantico/atraves-1749.jpg" alt="A través de mi ventana">
+                    <h2>A través de mi ventana</h2>
+                    <p>$1.749</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+                <!-- card -->
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/romantico/heist-1850.jpg" alt="Heist">
+                    <h2>Heist</h2>
+                    <p>$1.850</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+                <!-- card -->
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/romantico/dimeloconbesos-1799.jpg"
+                        alt="Dimelo con besos">
+                    <h2>Dimelo con besos</h2>
+                    <p>$2.190</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+            </div>
+            <!-- row -->
+            <div class="row content__cards">
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/romantico/dejate-atrapar.jpg" alt="Dejate atrapar">
+                    <h2>Dejate atrapar</h2>
+                    <p>$900</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+                <!-- card -->
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/romantico/alaska.jpg" alt="El día que dejó de nevar en Alaska">
+                    <h2>El día que dejó de nevar en Alaska</h2>
+                    <p>$2.090</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+                <!-- card -->
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/romantico/perfectos-mentirosos-1399.jpg" alt="Perfectos Mentirosos">
+                    <h2>Perfectos Mentirosos</h2>
+                    <p>$1.390</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+                <!-- card -->
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/romantico/fingiendo-amor.jpg"
+                        alt="Fingiendo amor">
+                    <h2>Fingiendo amor</h2>
+                    <p>$2.199</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+            </div>
         </div>
     </main>
 
