hice pagina editorial vyr

--- a/views/editorial.html
+++ b/views/editorial.html
@@ -35,7 +35,7 @@
     
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">Editorial</a>
+                                        <a class="nav-link" href="./editorial.html">Editorial</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="#">Contact</a>
@@ -82,7 +82,7 @@
             <!-- filtros -->
             <div class="container navbar-filtros">
                 <div class="generos__filtros">
-                    <a href="#">Vyr</a>
+                    <a href="./vyr.html">Vyr</a>
                     <a href="#">Hidra</a>
                     <a href="#">Puck</a>
                     <a href="#">Naranja</a>
