--- a/views/productos.html
+++ b/views/productos.html
@@ -34,11 +34,11 @@
                                     <a class="nav-link active " aria-current="page" href="../index.html">Inicio</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="libros nav-link " href="./views/productos.html">Libros</a>
+                                    <a class="libros nav-link active" href="./views/productos.html">Libros</a>
 
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Editorial</a>
+                                    <a class="nav-link" href="./editorial.html">Editorial</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Contact</a>
