--- a/views/fantasia.html
+++ b/views/fantasia.html
@@ -31,14 +31,14 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link active " aria-current="page" href="../index.html">Inicio</a>
+                                    <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="libros nav-link " href="./productos.html">Libros</a>
+                                    <a class="libros nav-link active" href="./productos.html">Libros</a>
 
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Editorial</a>
+                                    <a class="nav-link" href="./editorial.html">Editorial</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Contact</a>
@@ -87,7 +87,7 @@
         <!-- filtros -->
         <div class="container navbar-filtros">
             <div class="generos__filtros">
-                <a href="#" id="selected-block">Fantasía</a>
+                <a href="./fantasia.html" id="selected-block">Fantasía</a>
                 <a href="./ficcion.html">Ficción</a>
                 <a href="./terror.html">Terror</a>
                 <a href="./romantico.html">Romantico</a>
