--- a/views/romantico.html
+++ b/views/romantico.html
@@ -29,14 +29,14 @@
                             <div class="collapse navbar-collapse" id="navbarNav">
                                 <ul class="navbar-nav">
                                     <li class="nav-item">
-                                        <a class="nav-link active " aria-current="page" href="../index.html">Inicio</a>
+                                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="libros nav-link " href="./productos.html">Libros</a>
+                                        <a class="libros nav-link active" href="./productos.html">Libros</a>
     
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">Editorial</a>
+                                        <a class="nav-link" href="./editorial.html">Editorial</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="#">Contact</a>
