--- a/views/editorial.html
+++ b/views/editorial.html
@@ -28,14 +28,14 @@
                             <div class="collapse navbar-collapse" id="navbarNav">
                                 <ul class="navbar-nav">
                                     <li class="nav-item">
-                                        <a class="nav-link active " aria-current="page" href="../index.html">Inicio</a>
+                                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="libros nav-link " href="./productos.html">Libros</a>
     
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="./editorial.html">Editorial</a>
+                                        <a class="nav-link active" href="./editorial.html">Editorial</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="#">Contact</a>
@@ -83,7 +83,7 @@
             <div class="container navbar-filtros">
                 <div class="generos__filtros">
                     <a href="./vyr.html">Vyr</a>
-                    <a href="#">Hidra</a>
+                    <a href="./hidra.html">Hidra</a>
                     <a href="#">Puck</a>
                     <a href="#">Naranja</a>
                 </div>
@@ -97,7 +97,7 @@
                         <img src="../assets/media/libros/romantico/bajo-las-estrellas.jpg" alt="bajo las estrellas">
                         <h2>Bajo las estrellas</h2>
                         <p>$1.399</p>
-                        <a href="#" class="btn"><i class="fas fa-chevron-up"></i></a>
+                        <a href="./vyr.html" class="btn"><i class="fas fa-chevron-up"></i></a>
                     </div>
                     <!-- card -->
                     <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
