--- a/views/hidra.html
+++ b/views/hidra.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <meta charset="UTF-8">
-    <meta name="keywords" content="Atenas, Libros, Libreria, Vyr, supernova, fantasia, Tienda online, Envios Gratis">
+    <meta name="keywords" content="Atenas, Libros, Libreria, Hidra, rey elfhame, fantasia, Tienda online, Envios Gratis">
     <meta name="description"
         content="Todos los Libros que necesitas/buscas, en un solo lugar. Envios gratis en pedidos mayores a $3000. Recibi tu pedido en tu casa sin demoras.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Compra LIBROS Vyr</title>
+    <title>Compra LIBROS Hidra</title>
 </head>
 
 <body>
@@ -68,7 +68,7 @@
                     <li class="bread-lista__item"><a class="bread__link bread__link--back"
                             href="../views/editorial.html"> Editoriales </a>
                     </li>
-                    <li class="bread-lista__item"><p class="bread__link bread__link--red"> Vyr Editorial</p>
+                    <li class="bread-lista__item"><p class="bread__link bread__link--red"> Hidra Editorial</p>
                     </li>
                 </ul>
             </nav>
@@ -86,8 +86,8 @@
         <!-- filtros -->
         <div class="container navbar-filtros">
             <div class="generos__filtros">
-                <a href="./vyr.html" id="selected-block">Vyr</a>
-                <a href="./hidra.html">Hidra</a>
+                <a href="./vyr.html">Vyr</a>
+                <a href="./hidra.html" id="selected-block">Hidra</a>
                 <a href="./.html">Puck</a>
                 <a href="./.html">Naranja</a>
             </div>
@@ -98,64 +98,34 @@
             <!-- row -->
             <div class="row content__cards">
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                    <img src="../assets/media/libros/fantasia/supernova.jpg" alt="Supernova">
-                    <h2>Supernova</h2>
-                    <p>$1.399</p>
+                    <img src="../assets/media/libros/fantasia/rey-elfhame.jpg" alt="Como el Rey Elfhame aprendio a odiar las historias">
+                    <h2>Como el Rey Elfhame aprendio a...</h2>
+                    <p>$2.789</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                    <img src="../assets/media/libros/ficcion/lo-poco-que-sabemos.png" alt="Seras">
-                    <h2>Seras</h2>
-                    <p>$1.399</p>
+                    <img src="../assets/media/libros/fantasia/rey-maldito.jpg" alt="El Rey malvado">
+                    <h2>El Rey malvado</h2>
+                    <p>$2.500</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                    <img src="../assets/media/libros/romantico/bajo-las-estrellas.jpg" alt="Bajo las estrellas">
-                    <h2>Bajo las estrellas</h2>
-                    <p>$1.300</p>
+                    <img src="../assets/media/libros/fantasia/asedioytormenta.jpg" alt="Asedio y tormenta">
+                    <h2>Asedio y tormenta</h2>
+                    <p>$2.700</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                    <img src="../assets/media/libros/fantasia/maze-runner.png" alt="Maze runner 1">
-                    <h2>Maze Runner, correr o morir</h2>
-                    <p>$1.399</p>
+                    <img src="../assets/media/libros/fantasia/las-lunas-de-sartre.jpg" alt="Las Lunas de sartre">
+                    <h2>Las Lunas de Sartre</h2>
+                    <p>$1.900</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
             </div>
 
-            <!-- row -->
-            <div class="row content__cards">
-                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                    <img src="../assets/media/libros/fantasia/maze-2.jpg" alt="Maze Runner, prueba de fuego">
-                    <h2>Maze Runner, prueba de fuego</h2>
-                    <p>$1.740</p>
-                    <a href="#" class="btn">Comprar</a>
-                </div>
-                <!-- card -->
-                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                    <img src="../assets/media/libros/fantasia/maze-3.png" alt="Maze Runner, la cura mortal">
-                    <h2>Maze Runner, la cura mortal</h2>
-                    <p>$1.399</p>
-                    <a href="#" class="btn">Comprar</a>
-                </div>
-                <!-- card -->
-                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                    <img src="../assets/media/libros/fantasia/ultimo-mago.jpg" alt="El ultimo mago">
-                    <h2>El ultimo mago</h2>
-                    <p>$1.999</p>
-                    <a href="#" class="btn">Comprar</a>
-                </div>
-                <!-- card -->
-                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                    <img src="../assets/media/libros/ficcion/trece-razones.jpg" alt="Por trece razones">
-                    <h2>Por trece razones</h2>
-                    <p>$1.179</p>
-                    <a href="#" class="btn">Comprar</a>
-                </div>
-            </div>
 
         </div>
     </main>
