agregue editorial puck

--- a/views/editorial.html
+++ b/views/editorial.html
@@ -84,7 +84,7 @@
                 <div class="generos__filtros">
                     <a href="./vyr.html">Vyr</a>
                     <a href="./hidra.html">Hidra</a>
-                    <a href="#">Puck</a>
+                    <a href="./puck.html">Puck</a>
                     <a href="#">Naranja</a>
                 </div>
             </div>
