--- a/views/vyr.html
+++ b/views/vyr.html
@@ -88,7 +88,7 @@
             <div class="generos__filtros">
                 <a href="./vyr.html" id="selected-block">Vyr</a>
                 <a href="./hidra.html">Hidra</a>
-                <a href="./.html">Puck</a>
+                <a href="./puck.html">Puck</a>
                 <a href="./.html">Naranja</a>
             </div>
         </div>
@@ -105,7 +105,7 @@
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                    <img src="../assets/media/libros/ficcion/lo-poco-que-sabemos.png" alt="Seras">
+                    <img src="../assets/media/libros/ficcion/serás.png" alt="Seras">
                     <h2>Seras</h2>
                     <p>$1.399</p>
                     <a href="#" class="btn">Comprar</a>
