--- a/views/puck.html
+++ b/views/puck.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <meta charset="UTF-8">
-    <meta name="keywords" content="Atenas, Libros, Libreria, Hidra, rey elfhame, fantasia, Tienda online, Envios Gratis">
+    <meta name="keywords" content="Atenas, Libros, Libreria, puck, lore, riverdale, Tienda online, Envios Gratis">
     <meta name="description"
         content="Todos los Libros que necesitas/buscas, en un solo lugar. Envios gratis en pedidos mayores a $3000. Recibi tu pedido en tu casa sin demoras.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Compra LIBROS Hidra</title>
+    <title>Compra LIBROS Puck</title>
 </head>
 
 <body>
@@ -68,7 +68,7 @@
                     <li class="bread-lista__item"><a class="bread__link bread__link--back"
                             href="../views/editorial.html"> Editoriales </a>
                     </li>
-                    <li class="bread-lista__item"><p class="bread__link bread__link--red"> Hidra Editorial</p>
+                    <li class="bread-lista__item"><p class="bread__link bread__link--red"> Puck Editorial</p>
                     </li>
                 </ul>
             </nav>
@@ -87,8 +87,8 @@
         <div class="container navbar-filtros">
             <div class="generos__filtros">
                 <a href="./vyr.html">Vyr</a>
-                <a href="./hidra.html" id="selected-block">Hidra</a>
-                <a href="./puck.html">Puck</a>
+                <a href="./hidra.html">Hidra</a>
+                <a href="./puck.html" id="selected-block">Puck</a>
                 <a href="./.html">Naranja</a>
             </div>
         </div>
@@ -98,34 +98,43 @@
             <!-- row -->
             <div class="row content__cards">
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                    <img src="../assets/media/libros/fantasia/rey-elfhame.jpg" alt="Como el Rey Elfhame aprendio a odiar las historias">
-                    <h2>Como el Rey Elfhame aprendio a...</h2>
-                    <p>$2.789</p>
+                    <img src="../assets/media/libros/fantasia/lore.png" alt="Lore">
+                    <h2>Lore</h2>
+                    <p>$1.990</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                    <img src="../assets/media/libros/fantasia/rey-maldito.jpg" alt="El Rey malvado">
-                    <h2>El Rey malvado</h2>
-                    <p>$2.500</p>
+                    <img src="../assets/media/libros/ficcion/lo-poco-que-sabemos.png" alt="Lo poco que sabemos">
+                    <h2>Lo poco que sabemos</h2>
+                    <p>$2.190</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                    <img src="../assets/media/libros/fantasia/asedioytormenta.jpg" alt="Asedio y tormenta">
-                    <h2>Asedio y tormenta</h2>
-                    <p>$2.700</p>
+                    <img src="../assets/media/libros/ficcion/riverdale.jpg" alt="Riverdale">
+                    <h2>Riverdale</h2>
+                    <p>$1.500</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                    <img src="../assets/media/libros/fantasia/las-lunas-de-sartre.jpg" alt="Las Lunas de sartre">
-                    <h2>Las Lunas de Sartre</h2>
-                    <p>$1.900</p>
+                    <img src="../assets/media/libros/ficcion/sabrina.jpg" alt="Sabrina">
+                    <h2>Sabrina, el camino de la Bruja</h2>
+                    <p>$1.500</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
             </div>
 
+            <!-- row -->
+            <div class="row content__cards">
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/ficcion/obsesion-perversa.png" alt="Una obsesion-perversa">
+                    <h2>Una Obsesión perversa</h2>
+                    <p>$1.890</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+                
 
         </div>
     </main>
