agregue editorial naranja

--- a/views/editorial.html
+++ b/views/editorial.html
@@ -85,7 +85,7 @@
                     <a href="./vyr.html">Vyr</a>
                     <a href="./hidra.html">Hidra</a>
                     <a href="./puck.html">Puck</a>
-                    <a href="#">Naranja</a>
+                    <a href="./naranja.html">Naranja</a>
                 </div>
             </div>
     
