--- a/views/hidra.html
+++ b/views/hidra.html
@@ -89,7 +89,7 @@
                 <a href="./vyr.html">Vyr</a>
                 <a href="./hidra.html" id="selected-block">Hidra</a>
                 <a href="./puck.html">Puck</a>
-                <a href="./.html">Naranja</a>
+                <a href="./naranja.html">Naranja</a>
             </div>
         </div>
 
