--- a/views/naranja.html
+++ b/views/naranja.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <meta charset="UTF-8">
-    <meta name="keywords" content="Atenas, Libros, Libreria, puck, lore, riverdale, Tienda online, Envios Gratis">
+    <meta name="keywords" content="Atenas, Libros, Libreria, naranja, boulevard, Tienda online, Envios Gratis">
     <meta name="description"
         content="Todos los Libros que necesitas/buscas, en un solo lugar. Envios gratis en pedidos mayores a $3000. Recibi tu pedido en tu casa sin demoras.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -68,7 +68,7 @@
                     <li class="bread-lista__item"><a class="bread__link bread__link--back"
                             href="../views/editorial.html"> Editoriales </a>
                     </li>
-                    <li class="bread-lista__item"><p class="bread__link bread__link--red"> Puck Editorial</p>
+                    <li class="bread-lista__item"><p class="bread__link bread__link--red"> Naranja Editorial</p>
                     </li>
                 </ul>
             </nav>
@@ -88,8 +88,8 @@
             <div class="generos__filtros">
                 <a href="./vyr.html">Vyr</a>
                 <a href="./hidra.html">Hidra</a>
-                <a href="./puck.html" id="selected-block">Puck</a>
-                <a href="./naranja.html">Naranja</a>
+                <a href="./puck.html">Puck</a>
+                <a href="./naranja.html" id="selected-block">Naranja</a>
             </div>
         </div>
 
@@ -98,44 +98,19 @@
             <!-- row -->
             <div class="row content__cards">
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                    <img src="../assets/media/libros/fantasia/lore.png" alt="Lore">
-                    <h2>Lore</h2>
-                    <p>$1.990</p>
+                    <img src="../assets/media/libros/ficcion/boulevard.jpg" alt="Boulevard">
+                    <h2>Boulevard</h2>
+                    <p>$1.799</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
-                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                    <img src="../assets/media/libros/ficcion/lo-poco-que-sabemos.png" alt="Lo poco que sabemos">
-                    <h2>Lo poco que sabemos</h2>
-                    <p>$2.190</p>
-                    <a href="#" class="btn">Comprar</a>
-                </div>
-                <!-- card -->
-                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                    <img src="../assets/media/libros/ficcion/riverdale.jpg" alt="Riverdale">
-                    <h2>Riverdale</h2>
-                    <p>$1.500</p>
-                    <a href="#" class="btn">Comprar</a>
-                </div>
-                <!-- card -->
-                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                    <img src="../assets/media/libros/ficcion/sabrina.jpg" alt="Sabrina">
-                    <h2>Sabrina, el camino de la Bruja</h2>
-                    <p>$1.500</p>
-                    <a href="#" class="btn">Comprar</a>
-                </div>
-            </div>
-
-            <!-- row -->
-            <div class="row content__cards">
-                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                    <img src="../assets/media/libros/ficcion/obsesion-perversa.png" alt="Una obsesion-perversa">
-                    <h2>Una Obsesión perversa</h2>
-                    <p>$1.890</p>
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                    <img src="../assets/media/libros/romantico/fingiendo-amor.jpg" alt="Fingiendo amor">
+                    <h2>Fingiendo amor</h2>
+                    <p>$2.199</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
                 
-
         </div>
     </main>
 
