--- a/views/vyr.html
+++ b/views/vyr.html
@@ -89,7 +89,7 @@
                 <a href="./vyr.html" id="selected-block">Vyr</a>
                 <a href="./hidra.html">Hidra</a>
                 <a href="./puck.html">Puck</a>
-                <a href="./.html">Naranja</a>
+                <a href="./naranja.html">Naranja</a>
             </div>
         </div>
 
