--- a/views/page.html
+++ b/views/page.html
@@ -72,10 +72,112 @@
             </nav>
         </div>
     </header>
+
+
     <main>
         <div class="container product-page">
             <img src="../assets/media/libros/romantico/bajo-las-estrellas.jpg" alt="Bajo las estrellas">
+            <div class="info-libro">
+                <h1>BAJO LAS ESTRELLAS</h1>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <p>$1.399</p>
+                <div class="payment-icons">
+                    <div class="icons">
+                        <i class="fab fa-cc-visa"></i>
+                        <i class="fab fa-cc-paypal"></i>
+                        <i class="fab fa-cc-mastercard"></i>
+                        <i class="far fa-credit-card"></i>
+                        <i class="fab fa-bitcoin"></i>
+                    </div>
+                    <a href="#">Ver medios de pago</a>
+                </div>
+
+                <div class="comprar-content">
+                    <div class="form-cantidad">
+                        <label for="quantity">Cantidad</label>
+                        <input type="number" id="quantity" value="1">
+                    </div>
+
+                    <div class="botones-bc">
+                        <button type="submit" name="comprar" id="comprar" class="btn-book">Comprar</button>
+                        <button type="submit" name="AgregarAlCarrito" id="AgregarAlCarrito" class="btn-carro"><i class="fas fa-shopping-bag"></i></button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="container about-libro">
+            <h2>Acerca del libro</h2>
+            <p>Zorie y Lennon solían ser inseparables, pero desde hace un tiempo se han vuelto expertos en ignorarse. Cuando sus amigos los llevan engañados a acampar, la estratagema sale mal y de pronto los dos se encuentran atrapados en lo salvaje. Solos, lejos y sin hablarse. Sentimientos ocultos, secretos y heridas del pasado saldrán a la luz durante el peligroso viaje de regreso a la civilización, y los viejos amigos deberán volver a confiar el uno en el otro para salir ilesos y recomponer su corazón.</p>
         </div>
     </main>
+
+        <!-- footer -->
+        <footer class="container-fluid">
+            <div class="row">
+                <div class="footer-social col col-sm-12 col-md-6 col-lg-3">
+                    <h3>Redes Sociales</h3>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-pinterest"></i></a>
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                </div>
+    
+                <ul class="footer-list col col-sm-12 col-md-6 col-lg-3">
+                    <h3>Navegacion</h3>
+                    <li>
+                        <a href="./index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="./editorial.html">Editorial</a>
+                    </li>
+                    <li>
+                        <a href="./productos.html">Libros</a>
+                    </li>
+                    <li>
+                        <a href="#">Informacion</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
+                <ul class="libros-footer col col-sm-12 col-md-6 col-lg-3">
+                    <h3>Libros</h3>
+                    <li>Ficcion</li>
+                    <li>Fantasia</li>
+                    <li>Romance</li>
+                    <li>Terror</li>
+                </ul>
+                <ul class="editoriales-footer col col-sm-12 col-md-6 col-lg-3">
+                    <h3>Editoriales</h3>
+                    <li>Salamandra</li>
+                    <li>Hidra Editorial</li>
+                    <li>Naranja</li>
+                    <li>Vyr Editorial</li>
+                    <li>Puck Editorial</li>
+                </ul>
+                <div class="row fila-copy-footer">
+                    <p class="copyright col col-sm-12 col-md-12 col-lg-12">
+                        Copyright © Editoriales mencionadas
+                    </p>
+                </div>
+            </div>
+    
+        </footer>
+    
+    
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+            integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous">
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"
+            integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous">
+        </script>
 </body>
 </html>
