--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,7 +133,7 @@
     width: 50em; }
     .product-page .info-libro h1 {
       font-size: 30px;
-      font-family: "Amita", cursive; }
+      font-family: "Montserrat", sans-serif; }
     .product-page .info-libro P {
       transform: translateY(10px);
       font-size: 40px;
