--- a/views/riverdale.html
+++ b/views/riverdale.html
@@ -64,7 +64,7 @@
                                 class="fas fa-long-arrow-alt-left"></i> Home</a>
                     </li>
                     <li class="bread-lista__item"><a class="bread__link bread__link--back"
-                            href="../views/romantico.html"> Ficción </a>
+                            href="../views/ficcion.html"> Ficción </a>
                     </li>
                     <li class="bread-lista__item"><p class="bread__link bread__link--red"> Riverdale</p>
                     </li>
@@ -76,7 +76,7 @@
 
     <main>
         <div class="container product-page">
-            <img src="../assets/media/libros/romantico/bajo-las-estrellas.jpg" alt="Bajo las estrellas">
+            <img src="../assets/media/libros/ficcion/riverdale.jpg" alt="Bajo las estrellas">
             <div class="info-libro">
                 <h1>RIVARDALE, EL DÍA ANTERIOR</h1>
                 <div class="star">
@@ -86,7 +86,7 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                 </div>
-                <p>$1.399</p>
+                <p>$1.500</p>
                 <div class="payment-icons">
                     <div class="icons">
                         <i class="fab fa-cc-visa"></i>
@@ -115,7 +115,7 @@
 
         <div class="container about-libro">
             <h2>Acerca del libro</h2>
-            <p>Zorie y Lennon solían ser inseparables, pero desde hace un tiempo se han vuelto expertos en ignorarse. Cuando sus amigos los llevan engañados a acampar, la estratagema sale mal y de pronto los dos se encuentran atrapados en lo salvaje. Solos, lejos y sin hablarse. Sentimientos ocultos, secretos y heridas del pasado saldrán a la luz durante el peligroso viaje de regreso a la civilización, y los viejos amigos deberán volver a confiar el uno en el otro para salir ilesos y recomponer su corazón.</p>
+            <p>Conoceremos cómo era la lujosa vida de, la muy insoportable, Verónica Lodge en Manhattan y porqué termina en un pueblo sin glamour como Riverdale; qué tal la iba a Betty Cooper en sus prácticas en una revista de Los Ángeles; cómo Jughead Jones se entera de quién es realmente su padre y cómo intenta sobrevivir; y por último porqué Archie Andrews ha cambiado tanto de repente, engaña a sus seres queridos y deja tirados a sus amigos.</p>
         </div>
     </main>
 
