link productos a sus paginas

--- a/views/productos.html
+++ b/views/productos.html
@@ -106,21 +106,21 @@
                     <img src="../assets/media/libros/ficcion/riverdale.jpg" alt="riverdale">
                     <h2>Riverdale, El dia anterior</h2>
                     <p>$1.500</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./riverdale.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/ficcion/sabrina.jpg" alt="sabrina">
                     <h2>Sabrina, El camino de la Bruja</h2>
                     <p>$1.500</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./sabrina.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/ficcion/lo-poco-que-sabemos.png" alt="Lo poco que sabemos">
                     <h2>Lo poco que sabemos</h2>
                     <p>$2.190</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./lopocoquesabemos.html" class="btn">Comprar</a>
                 </div>
             </div>
 
