asesino de brujas

--- a/views/asesinodebrujas.html
+++ b/views/asesinodebrujas.html
@@ -76,9 +76,9 @@
 
     <main>
         <div class="container product-page">
-            <img src="../assets/media/libros/ficcion/sabrina.jpg" alt="Sanbrina, el camino de la bruja">
+            <img src="../assets/media/libros/fantasia/asesino-brujas.jpg" alt="asesino de brujas">
             <div class="info-libro">
-                <h1>SABRINA, EL CAMINO DE LA BRUJA</h1>
+                <h1>ASESINO DE BRUJAS</h1>
                 <div class="star">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -86,7 +86,7 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                 </div>
-                <p>$1.500</p>
+                <p>$1.790</p>
                 <div class="payment-icons">
                     <div class="icons">
                         <i class="fab fa-cc-visa"></i>
@@ -116,7 +116,7 @@
         <div class="container about-libro">
             <h2>Acerca del libro</h2>
             <p>
-            Sabrina sabe que dentro de muy poco, en su cumpleaños, tendrá que firmar en El Libro de la Bestia y entregarle su alma a Satán. Sin embargo, las dudas le corroen. ¿Eso querrá decir que tendrá que abandonar por completo a sus amigos mortales y, especialmente, a su novio Harvey? 
+                Como cazador de la Iglesia, Reid Diggory ha vivido su vida bajo una regla: «No permitirás que ninguna bruja viva». Pero cuando Lou realiza una gran artimaña, tanto ella como Reid se ven obligados a aceptar una situación impensada: el matrimonio.
             </p>
         </div>
     </main>
