--- a/views/productos.html
+++ b/views/productos.html
@@ -145,7 +145,7 @@
                     <img src="../assets/media/libros/fantasia/las-lunas-de-sartre.jpg" alt="Las lunas de sartre">
                     <h2>Las Lunas de Sartre</h2>
                     <p>$1.900</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./sartre.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
@@ -184,7 +184,7 @@
                         alt="los manuscritos rojos de la magia">
                     <h2>Los Manuscritos rojos de la Magia</h2>
                     <p>$2.190</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./manuscritosrojos.html" class="btn">Comprar</a>
                 </div>
             </div>
             <!-- row -->
