--- a/views/fantasia.html
+++ b/views/fantasia.html
@@ -109,7 +109,7 @@
                     <img src="../assets/media/libros/fantasia/las-lunas-de-sartre.jpg" alt="">
                     <h2>Las Lunas de Sartre</h2>
                     <p>$1.900</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./sartre.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
@@ -123,7 +123,7 @@
                     <img src="../assets/media/libros/fantasia/manuscritos-rojos.png" alt="">
                     <h2>Los manuscritos rojos de la magia</h2>
                     <p>$2.190</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./manuscritosrojos.html" class="btn">Comprar</a>
                 </div>
             </div>
 
