a dos metros de ti

--- a/views/ficcion.html
+++ b/views/ficcion.html
@@ -107,7 +107,7 @@
                     <img src="../assets/media/libros/ficcion/dos-metros-de-ti.png" alt="a dos metros de ti">
                     <h2>A dos metros de ti</h2>
                     <p>$1.590</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./adosmetrosdeti.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
