--- a/views/romantico.html
+++ b/views/romantico.html
@@ -114,7 +114,7 @@
                         <img src="../assets/media/libros/romantico/heist-1850.jpg" alt="heist">
                         <h2>Heist</h2>
                         <p>$1.869</p>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="./heist.html" class="btn">Comprar</a>
                     </div>
                     <!-- card -->
                     <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
